fixed nav bar for mobile

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -403,9 +403,9 @@ table.gadget {
     border-left: none;
   }
 
-  .dropdown-menu li{
-    visibility: hidden;
-  }
+  // .dropdown-menu li{
+  //   visibility: hidden;
+  // }
 }
 
 @media (max-width: 767px) {
