--- a/app/views/static_pages/advancedtechnology.html.erb
+++ b/app/views/static_pages/advancedtechnology.html.erb
@@ -17,7 +17,7 @@
 					<%= image_tag 'orthophos.jpg' %>
 				</div>
 			</div>
-			<p>
+			<p style="margin-top:20px;">
 				Reflective of TLC’s cutting edge technology is the Orthophos XG 5 made by Sirona, a company that traces its lineage to the first manufacturer of X-ray equipment. A premier instrument of “panorex” imaging, the Orthophos XG 5 embodies this Sirona heritage. Its CAN bus technology and high speed interface deliver ultra fast performance and its CCD sensors provide high quality panorex images. In turn, these exceptional digital images enhance the distinctive dental treatments of TLC.<br>
 			</p>
 			<p>
@@ -41,8 +41,7 @@
 					<%= image_tag 'usbcam.jpg', :style => "margin-left:15px;" %>
 				</div>
 			</div>
-
-			<p>
+			<p style="margin-top:20px;">
 				The USBCAM2 is the newest hand-held intraoral camera from Schick Technologies and is a marvelous dental communication tool. It provides still frame photos and full motion videos with superb color and VGA resolution that enable TLC dentists, hygienists, and patients to partner in reviewing present and post treatment conditions.<br>
 			</p>
 			<p>
@@ -63,7 +62,7 @@
 					<%= image_tag 'xray.jpg' %>
 				</div>
 			</div>
-			<p>
+			<p style="margin-top:20px;">
 				The Provecta 70 Intraoral X-Ray comes to us from Air Techniques, a leader in optimized imagery. Ergonomically engineered for precise positioning and stability, it provides unrivaled sets of intraoral x-rays, the roadmaps to our patient’s dental health.<br>
 			</p>
 			<p>
@@ -84,7 +83,7 @@
 					<%= image_tag 'whiteningmachine.jpg', :style => "margin-left:15px;" %>
 				</div>
 			</div>
-			<p>
+			<p style="margin-top:20px;">
 				The Polus Whitening Accelerator by Byeond Dental is the ultimate in tooth whitening technology. Its distinctive LightBridge system combines halogen and LED light sources for superior whitening power while advanced filtration ensures patient safety by removing all harmful heat and ultraviolet output. Three flexible settings tailr the treatment to a patient’s tooth sensitivity level and a detachable LED curing light enables spot whitening of a single tooth.<br>
 			</p>
 			<p>
@@ -105,7 +104,7 @@
 					<%= image_tag 'jetplus.jpg' %>
 				</div>				
 			</div>
-			<p>
+			<p style="margin-top:20px;">
 				The Cavitron Jet Plus by Dentsply is dentistry’s most advanced ultrasonic scaling and polishing unit. Extended SPS technology provides the Cavitron Jet Plus with tip “cruise control” that is adjustable by means of a wireless foot control. When comfortable cavitation is completed, a final Rinse Mode provides a refreshing water flush that is followed by a resplendent polishing. So transformative is the painless Cavitron Jet Plus that we think of it as a deluxe car wash in dental guise. The patient just sits back and enjoys the ride while the darkness of a Syracuse winter is washed away and a radiant smile emerges.
 			</p>		
 		</div>
@@ -123,7 +122,7 @@
 					<%= image_tag 'diodelaser.jpg', :style => "margin-left: 25px;" %>
 				</div>				
 			</div>				
-			<p>
+			<p style="margin-top:20px;">
 				The Odyssey Navigator by Ivoclar Vivadent is a patient-friendly diode laser that is ideally suited for soft-tissue procedures. While completing many procedures immediately and without pain, the Navigator concurrently decontaminates and greatly expedites healing. It also effectively treats cold sores and fever blisters. So celestial is the Navigator that we sometimes think of it as a “lightsaber” and of ourselves as Luke Skywalker.
 			</p>		
 		</div>
@@ -141,7 +140,7 @@
 					<%= image_tag 'eaglesoft.jpg' %>
 				</div>				
 			</div>							
-			<p>
+			<p style="margin-top:20px;">
 				Eaglesoft is the invisble hand that guides our computers and our Orthophos. This state of the art software by Patterson not only orchestrates our equipment but also provides our practice and patients with instant access to dental records. So integral to our office is Eaglesoft, that we consider it a member of the staff and call it Happy Hal. 
 			</p>		
 		</div>
@@ -162,7 +161,7 @@
 					<%= image_tag 'tv.jpg', :style => "margin-left:-15px;"%>
 				</div>				
 			</div>
-			<p>
+			<p style="margin-top:20px;">
 				Every treatment room of our TLC office has a 32 inch Panasonic TC-L32C22 HDTV attached to an expandable wall mount. The TC-L32C22 is a top of the line HDTV that serves as a computer monitor and that brings striking clarity to the dental images produced by its room companions. Its dimensions, resolution, and expandability enable both patient and practitioner to review carefully the state of the art images upon which treatments are predicated. And it transforms treatment rooms into cinemas in which our patients are the screen stars. 
 			</p>		
 		</div>
