--- a/app/views/static_pages/gentledentistry.html.erb
+++ b/app/views/static_pages/gentledentistry.html.erb
@@ -17,7 +17,7 @@
  					<%= image_tag 'cowardlylion.jpg' %>
  				</div>				
 			</div>
-			<p>
+			<p style="margin-top:20px;">
 				For more than a quarter of a century our calling card has been “We cater to dental cowards” and over this time our founder, Dr. Rothenberg, has set the Syracuse benchmark for gentle dentistry. Today, TLC draws on an array of resources to assure your dental comfort.
 			</p>				
 		</div>
@@ -31,7 +31,7 @@
 					<h3>Comforting Staff</h3>
 				</div>
 			</div> 				
-			<p>
+			<p style="margin-top:20px;">
 				Foremost in providing for your dental comfort are the dentists and hygienists of TLC. The exacting standards of Dr. Rothenberg are reflected in the welcoming manner and understanding demeanor of our staff. Their compassion and tender care assure the comfort of your dental treatment.
 			</p>				
 		</div>
@@ -45,7 +45,7 @@
 					<h3>Comforting Ambiance</h3> 
 				</div>
 			</div>
-			<p>
+			<p style="margin-top:20px;">
 				Our treatment rooms are imbued with inviting warmth. The harmonies of feng shui are found in lightness, in the beauty of flowers, in the naturalness of plants. Serenity is found in meditation music that surrounds you.
 			</p>				
 		</div>
@@ -62,7 +62,7 @@
 					<%= image_tag 'comfortingamenities.jpg' %>
 				</div>
 			</div>
-			<p>
+			<p style="margin-top:20px;">
 				Further comfort can be found in a soothing neck warmer, a relaxing back massager, a restful paraffin hand wax, and mesmerizing 920HR i-glasses.
 			</p>				
 		</div>
@@ -79,7 +79,7 @@
 					<%= image_tag 'gentle_flossy.jpg' %>
 				</div>
 			</div>
-			<p>
+			<p style="margin-top:20px;">
 				For patients of all ages who find comfort in “man’s best friend”, our most loveable staff member stands at the ready. Flossy is not only a wonderfully affectionate white Labrador, but she also is a certified therapy dog who likes nothing better than to comfort patients.
 			</p>				
 		</div>
@@ -96,7 +96,7 @@
 					<%= image_tag 'flowers.jpg' %>
 				</div>
 			</div>
-			<p>
+			<p style="margin-top:20px;">
 				Although abundant patient comfort is afforded by the tender care of our staff and by our relaxing ambiance and amenities, several anesthetics and analgesics are available to assure your comfort during treatment. 
 			</p>				
 		</div>
@@ -113,7 +113,7 @@
 					<%= image_tag 'sedation.jpg' %>
 				</div>
 			</div>
-			<p>
+			<p style="margin-top:20px;"> 
 				Sedation also appeals to many of our patients. We are pleased to offer them nitrous oxide as well as the increasingly popular “Walk in the Park” sedation.
 			</p>				
 		</div>
@@ -130,7 +130,7 @@
 					<%= image_tag 'beach.jpg' %>
 				</div>
 			</div>
-			<p>
+			<p style="margin-top:20px;">
 				For our staff, your care and comfort are inseparable, as wedded as sand and sea. We are committed to providing you with both optimal dental care and comfort.
 			</p>				
 		</div>
