fixed dental nexus title

--- a/app/views/static_pages/dentalnexus.html.erb
+++ b/app/views/static_pages/dentalnexus.html.erb
@@ -1,7 +1,7 @@
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
-			<u>Dental & General Health</u>
+			<u>Nexus of Dental & General Health</u>
 		</div>
 	</div>
 </div>
@@ -9,10 +9,10 @@
 <div class="row-fluid">
 	<div class="span8 offset2">
 		<p style="color: #0f53a5; margin-top:30px;">
-			Modern research is revealig a closer relationship between your dental health and general. The bacteria that cause preiodontal disease can reach far beyond the oral cavity and may affect these conditions:
+			Modern research is revealing a closer relationship between your dental health and general. The bacteria that cause preiodontal disease can reach far beyond the oral cavity and may affect these conditions in the following chart:
 		</p>
 		<p style="color: #0f53a5; margin-bottom:55px;">
-			For research updates on that relationship between your dental health and general health, please pay regular visitings to the TLC Wisdom Tooth at tlcwisdomtooth.com
+			For research updates on that relationship between your dental health and general health, please pay regular visitings to the Wisdom Tooth at tlcwisdomtooth.com
 		</p>
 	</div>
 </div>
