--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,15 +11,25 @@
 	<div class="above-nav">
 		<div class="row-fluid">
 			<div class="offset1 span2">
-				<%= image_tag 'TLC_logo.jpg' %>
+				<img itemprop="logo" src="/assets/TLC_logo.jpg">
+			</div>			
+			<div itemscope itemtype="http://schema.org/Organization"> 
+				<div class="span6" style="margin-top: -15px;">
+					<span itemprop="name">
+						<b><i><h1>Rothenberg DDS/<br>TLC Dental Group</h1>
+					</span>
+					<h2>The Art of Gentle Dentistry</h2></b></i>
+				</div>
+				<div class="span2">
+					<i><h4 style="line-height:25px; margin-top: -6px;"><span itemprop="telephone">315-637-7684</span><br>
+					<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+						<span itemprop="streetAddress">7197 Highbridge</span>
+						<br><span itemprop="addressLocality">Fayetteville</span>, <span itemprop="addressRegion">NY</span>
+					</div>
+					Directions<br>Email Us</h4></i>
+				</div>			
 			</div>
-			<div class="span6" style="margin-top: -15px;">
-				<b><i><h1>Rothenberg DDS/<br>TLC Dental Group</h1><h2>The Art of Gentle Dentistry</h2></b></i>
-			</div>
-			<div class="span2">
-				<i><h4 style="line-height:25px; margin-top: -6px;">315-637-7684<br>7197 Highbridge<br>Fayetteville, NY<br>Directions<br>Email Us</h4></i>
-			</div>	
-		</div>			
+		</div>
 	</div>
 	<div class="row-fluid">
 		<div class="span12" style="text-align:center;">
