--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 				<div class="span2">
 					<i><h4 style="line-height:25px; margin-top: -6px;"><span itemprop="telephone">315-637-7684</span><br>
 					<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-						<span itemprop="streetAddress">7197 Highbridge</span>
+						<span itemprop="streetAddress">7197 Highbridge Road</span>
 						<br><span itemprop="addressLocality">Fayetteville</span>, <span itemprop="addressRegion">NY</span>
 					</div>
 					Directions<br>Email Us</h4></i>
