--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,28 +7,35 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div itemscope itemtype="http://schema.org/Organization" style="display:none;">
+<a itemprop="url" href="tlcdentalsyr.com"><div itemprop="name"><strong>Rothenberg DDS/ TLC Dental Group</strong></div>
+</a>
+<div itemprop="description">TLC is many facets of care. We at TLC warmly welcome you to
+our family of staff and patients.</div>
+<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+<span itemprop="streetAddress">7197 Highbridge Road</span><br>
+<span itemprop="addressLocality">Fayetteville</span><br>
+<span itemprop="addressRegion">NY</span><br>
+<span itemprop="postalCode">13066</span><br>
+<span itemprop="addressCountry">United States</span><br>
+</div>
+</div>		
 <div class="container">
 	<div class="above-nav">
 		<div class="row-fluid">
 			<div class="offset1 span2">
 				<img itemprop="logo" src="/assets/TLC_logo.jpg">
-			</div>			
-			<div itemscope itemtype="http://schema.org/Organization"> 
-				<div class="span6" style="margin-top: -15px;">
-					<span itemprop="name">
-						<b><i><h1>Rothenberg DDS/<br>TLC Dental Group</h1>
-					</span>
-					<h2>The Art of Gentle Dentistry</h2></b></i>
-				</div>
-				<div class="span2">
-					<i><h4 style="line-height:25px; margin-top: -6px;"><span itemprop="telephone">315-637-7684</span><br>
-					<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-						<span itemprop="streetAddress">7197 Highbridge Road</span>
-						<br><span itemprop="addressLocality">Fayetteville</span>, <span itemprop="addressRegion">NY</span>
-					</div>
-					Directions<br>Email Us</h4></i>
-				</div>			
 			</div>
+			<div class="span6" style="margin-top: -15px;">
+				<b><i><h1><span itemprop="name">Rothenberg DDS</span>/<br>TLC Dental Group</h1>
+				<h2>The Art of Gentle Dentistry</h2></b></i>
+			</div>
+			<div class="span2">
+				<i><h4 style="line-height:25px; margin-top: -6px;">315-637-7684<br>
+				7197 Highbridge Rd.
+				<br>Fayetteville, NY
+				<br>Directions<br>Email Us</h4></i>
+			</div>			
 		</div>
 	</div>
 	<div class="row-fluid">
