fixing staff page tables and images

--- a/app/views/static_pages/staff.html.erb
+++ b/app/views/static_pages/staff.html.erb
@@ -284,7 +284,7 @@
 				</tr>
 				<tr>
 					<td>Third Most Fun Thing:</td>
-					<td>Visiting parents at special events. (some of them are really surprised to see me)</td>
+					<td>Flabbergasting parents at special events</td>
 				</tr>
 				<tr>
 					<td>Favorite Food:</td>
@@ -300,15 +300,15 @@
 				</tr>				
 				<tr>
 					<td>Favorite Person:</td>
-					<td>Dr. Rothenberg.  He tells me which little boys and girls I should visit. (and he always lets me dance on his light beam)</td>
+					<td>Dr. Rothenberg.  He always lets me dance on his light beam.</td>
 				</tr>
 				<tr>
 					<td>Second Favorite Person:</td>
-					<td>Marsha Rothenberg.  She tells me funny stories. (sometimes she asks me for wings so she can fly with me but the Tooth Fairy Queen says no)</td>
+					<td>Marsha Rothenberg. She funny and always asks for wings so she can fly with me</td>
 				</tr>
 				<tr>
 					<td>Third Favorite Person:</td>
-					<td>Flossy.  Well, she’s almost a person and she’s always happy to see me</td>
+					<td>Flossy.  Well, she's almost a person</td>
 				</tr>
 			</table>								
 		</div>
