added title pages

--- a/app/views/static_pages/brokentooth.html.erb
+++ b/app/views/static_pages/brokentooth.html.erb
@@ -1,3 +1,4 @@
+<title>TLC Dental Group Syracuse | Fractured or Broken Tooth</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
