--- a/app/views/static_pages/greendentistry.html.erb
+++ b/app/views/static_pages/greendentistry.html.erb
@@ -1,3 +1,4 @@
+<title>TLC Dental Group Syracuse | Green Dentistry</title>
 <div class="green-pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
