--- a/app/views/static_pages/chippedcrown.html.erb
+++ b/app/views/static_pages/chippedcrown.html.erb
@@ -1,3 +1,4 @@
+<title>TLC Dental Group Syracuse | Dislodged, Lost, or Significantly Chipped Crown</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
