fixed spelling errors in nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,7 +94,7 @@ our family of staff and patients.</div>
 		            <li><%= link_to "Canker Sores", commondentalproblems_cankersores_path %></li>
 		            <li><%= link_to "Cold Sores", commondentalproblems_coldsores_path %></li>
 		            <li><%= link_to "Cracked or Lost Filling", commondentalproblems_crackedfilling_path %></li>
-		            <li><%= link_to "Dislodged, Lost, or Significatly Chipped Crown", commondentalproblems_chippedcrown_path %></li>	
+		            <li><%= link_to "Dislodged, Lost, or Significantly Chipped Crown", commondentalproblems_chippedcrown_path %></li>	
 		            <li><%= link_to "Dry Mouth", commondentalproblems_drymouth_path %></li>
 		            <li><%= link_to "Fractured or Broken Tooth", commondentalproblems_brokentooth_path %></li>
 		            <li><%= link_to "Grimy, Sticky Teeth", commondentalproblems_stickyteeth_path %></li>
@@ -125,7 +125,7 @@ our family of staff and patients.</div>
 		            <li><%= link_to "Flouride Treatments", preventivedentistry_flouridetreatment_path %></li>
 		            <li><%= link_to "Oral Hygiene", preventivedentistry_oralhygiene_path %></li>	
 		            <li><%= link_to "Rotadent Toothbrush", preventivedentistry_rotadent_path %></li>
-		            <li><%= link_to "Soft Tissue Managment", preventivedentistry_softtissue_path %></li>
+		            <li><%= link_to "Soft Tissue Management", preventivedentistry_softtissue_path %></li>
 		            <li><%= link_to "Tobacco Cessation Program", preventivedentistry_tabaccocessationprogram_path %></li>      
 		          </ul>	
 		        </li>     
