fixed spelling errors and title tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
 <div itemscope itemtype="http://schema.org/Organization" style="display:none;">
@@ -126,7 +127,7 @@ our family of staff and patients.</div>
 		            <li><%= link_to "Oral Hygiene", preventivedentistry_oralhygiene_path %></li>	
 		            <li><%= link_to "Rotadent Toothbrush", preventivedentistry_rotadent_path %></li>
 		            <li><%= link_to "Soft Tissue Management", preventivedentistry_softtissue_path %></li>
-		            <li><%= link_to "Tobacco Cessation Program", preventivedentistry_tabaccocessationprogram_path %></li>      
+		            <li><%= link_to "Tobacco Cessation Program", preventivedentistry_tobaccocessationprogram_path %></li>      
 		          </ul>	
 		        </li>     
 		        <li><%= link_to "Nexus of Dental & General Health", treatments_dentalnexus_path %></li>
