--- a/app/views/static_pages/abscessedtooth.html.erb
+++ b/app/views/static_pages/abscessedtooth.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Abscessed Tooth or Gum</title>
+<title>Abscessed Tooth or Gum | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
