--- a/app/views/static_pages/badbreath.html.erb
+++ b/app/views/static_pages/badbreath.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Bad Breath</title>
+<title>Bad Breath | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
