--- a/app/views/static_pages/bleedinggums.html.erb
+++ b/app/views/static_pages/bleedinggums.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Swollen, Tender, Bleeding Gums</title>
+<title>Swollen, Tender, Bleeding Gums | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
