--- a/app/views/static_pages/brokendentures.html.erb
+++ b/app/views/static_pages/brokendentures.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Broken or Ill Fitting Dentures</title>
+<title>Broken or Ill Fitting Dentures | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
