--- a/app/views/static_pages/brokentooth.html.erb
+++ b/app/views/static_pages/brokentooth.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Fractured or Broken Tooth</title>
+<title>Fractured or Broken Tooth | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
