--- a/app/views/static_pages/burningmouth.html.erb
+++ b/app/views/static_pages/burningmouth.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Burning Mouth Syndrome</title>
+<title>Burning Mouth Syndrome | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
