--- a/app/views/static_pages/drymouth.html.erb
+++ b/app/views/static_pages/drymouth.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Dry Mouth</title>
+<title>Dry Mouth | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
