--- a/app/views/static_pages/flouridetreatment.html.erb
+++ b/app/views/static_pages/flouridetreatment.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Flouride Treatments</title>
+<title>Flouride Treatments | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
