--- a/app/views/static_pages/headache.html.erb
+++ b/app/views/static_pages/headache.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Headache</title>
+<title>Headache | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
