--- a/app/views/static_pages/losttooth.html.erb
+++ b/app/views/static_pages/losttooth.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Loose or Lost Tooth</title>
+<title>Loose or Lost Tooth | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
