--- a/app/views/static_pages/newpatients.html.erb
+++ b/app/views/static_pages/newpatients.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | New Patients</title>
+<title>New Patients | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
