--- a/app/views/static_pages/oralcancerscreening.html.erb
+++ b/app/views/static_pages/oralcancerscreening.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Oral Cancer Screening</title>
+<title>Oral Cancer Screening | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
