--- a/app/views/static_pages/preventivedentalcleaning.html.erb
+++ b/app/views/static_pages/preventivedentalcleaning.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Professional Dental Cleaning</title>
+<title>Professional Dental Cleaning | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
