--- a/app/views/static_pages/preventivedentistry.html.erb
+++ b/app/views/static_pages/preventivedentistry.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Preventive Dentistry</title>
+<title>Preventive Dentistry | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
@@ -23,7 +23,7 @@
 	            <li><%= link_to "TLC Oral Hygiene", preventivedentistry_oralhygiene_path %></li>	<br>
 	            <li><%= link_to "TLC Rotadent Toothbrush", preventivedentistry_rotadent_path %></li><br>
 	            <li><%= link_to "TLC Soft Tissue Managment", preventivedentistry_softtissue_path %></li><br>
-	            <li><%= link_to "TLC Tobacco Cessation Program", preventivedentistry_tabaccocessationprogram_path %></li><br></b>    
+	            <li><%= link_to "TLC Tobacco Cessation Program", preventivedentistry_tobaccocessationprogram_path %></li><br></b>    
 	          </ul>			
 		</div>
 	</div>
