--- a/app/views/static_pages/rootcanal.html.erb
+++ b/app/views/static_pages/rootcanal.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Root Canal</title>
+<title>Root Canal | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
