--- a/app/views/static_pages/rotadent.html.erb
+++ b/app/views/static_pages/rotadent.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Rotadent Toothbrush</title>
+<title>Rotadent Toothbrush | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
