--- a/app/views/static_pages/sleepapnea.html.erb
+++ b/app/views/static_pages/sleepapnea.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Sleep Apnea</title>
+<title>Sleep Apnea | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
