--- a/app/views/static_pages/snaponsmile.html.erb
+++ b/app/views/static_pages/snaponsmile.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Snap-On-Smile</title>
+<title>Snap-On-Smile | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
