--- a/app/views/static_pages/softtissue.html.erb
+++ b/app/views/static_pages/softtissue.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Soft Tissue Management</title>
+<title>Soft Tissue Management | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
