--- a/app/views/static_pages/testimonials.html.erb
+++ b/app/views/static_pages/testimonials.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Testimonials | Home Page</title>
+<title>Testimonials | TLC Dental Group Testimonials</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
