--- a/app/views/static_pages/toothbrushmailbox.html.erb
+++ b/app/views/static_pages/toothbrushmailbox.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | The TLC Toothbrush Mailbox</title>
+<title>TLC Toothbrush Mailbox | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
