--- a/app/views/static_pages/toothextraction.html.erb
+++ b/app/views/static_pages/toothextraction.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Tooth Extraction</title>
+<title>Tooth Extraction | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
