--- a/app/views/static_pages/TMD.html.erb
+++ b/app/views/static_pages/TMD.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | TMD or TMJ</title>
+<title>TMD or TMJ | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
