--- a/app/views/static_pages/advancedtechnology.html.erb
+++ b/app/views/static_pages/advancedtechnology.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Advanced Technology</title>
+<title>Advanced Technology | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
