--- a/app/views/static_pages/amenities.html.erb
+++ b/app/views/static_pages/amenities.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Amenities</title>
+<title>Amenities | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
