--- a/app/views/static_pages/athleticmouthguards.html.erb
+++ b/app/views/static_pages/athleticmouthguards.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Athletic Mouthguards</title>
+<title>Athletic Mouthguards | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
