--- a/app/views/static_pages/bridges.html.erb
+++ b/app/views/static_pages/bridges.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Bridges</title>
+<title>Bridges | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
