--- a/app/views/static_pages/cankersores.html.erb
+++ b/app/views/static_pages/cankersores.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Canker Sores</title>
+<title>Canker Sores | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
