--- a/app/views/static_pages/coldsores.html.erb
+++ b/app/views/static_pages/coldsores.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Cold Sores</title>
+<title>Cold Sores | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
