--- a/app/views/static_pages/commondentalproblems.html.erb
+++ b/app/views/static_pages/commondentalproblems.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Common Dental Problems</title>
+<title>Common Dental Problems |TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
