--- a/app/views/static_pages/contouring.html.erb
+++ b/app/views/static_pages/contouring.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Contouring</title>
+<title>Contouring | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
