--- a/app/views/static_pages/crackedfilling.html.erb
+++ b/app/views/static_pages/crackedfilling.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Cracked or Lost Filling</title>
+<title>Cracked or Lost Filling | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
