--- a/app/views/static_pages/dentalnexus.html.erb
+++ b/app/views/static_pages/dentalnexus.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Nexus of Dental and General Health</title>
+<title>Nexus of Dental and General Health | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
