--- a/app/views/static_pages/dreamsmilediet.html.erb
+++ b/app/views/static_pages/dreamsmilediet.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Dream Smile Diet</title>
+<title>Dream Smile Diet | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
