--- a/app/views/static_pages/dreamsmiles.html.erb
+++ b/app/views/static_pages/dreamsmiles.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Dreamsmile Solutions</title>
+<title>Dreamsmile Solutions | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
