--- a/app/views/static_pages/gentledentistry.html.erb
+++ b/app/views/static_pages/gentledentistry.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Gentle Dentistry</title>
+<title>Gentle Dentistry | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
