--- a/app/views/static_pages/implants.html.erb
+++ b/app/views/static_pages/implants.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Implants</title>
+<title>Implants | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
