--- a/app/views/static_pages/oralhygiene.html.erb
+++ b/app/views/static_pages/oralhygiene.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Oral Hygiene</title>
+<title>Oral Hygiene | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
