--- a/app/views/static_pages/staff.html.erb
+++ b/app/views/static_pages/staff.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Staff</title>
+<title>Staff | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
