--- a/app/views/static_pages/stickyteeth.html.erb
+++ b/app/views/static_pages/stickyteeth.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Grimy, Sticky Teeth</title>
+<title>Grimy, Sticky Teeth | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
