--- a/app/views/static_pages/teethgrinding.html.erb
+++ b/app/views/static_pages/teethgrinding.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Teeth Grinding</title>
+<title>Teeth Grinding | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
