--- a/app/views/static_pages/whitening.html.erb
+++ b/app/views/static_pages/whitening.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Teeth Whitening</title>
+<title>Teeth Whitening | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
