--- a/app/views/static_pages/wisdomteeth.html.erb
+++ b/app/views/static_pages/wisdomteeth.html.erb
@@ -1,4 +1,4 @@
-<title>TLC Dental Group Syracuse | Wisdom Teeth</title>
+<title>Wisdom Teeth | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
