fixed home page header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@ our family of staff and patients.</div>
 	<div class="above-nav">
 		<div class="row-fluid">
 			<div class="offset1 span2">
-				<img itemprop="logo" src="/assets/TLC_logo.jpg">
+				<img itemprop="logo" src="/assets/TLC_logo.jpg" alt="TLC Dental Group Syracuse NY Logo">
 			</div>
 			<div class="span6" style="margin-top: -15px;">
 				<b><i><h1><span itemprop="name">Rothenberg DDS</span>/<br>TLC Dental Group</h1>
@@ -147,8 +147,8 @@ our family of staff and patients.</div>
 	<div class="span2 offset6">
 		<div class="socialmedia">
 			<h6 style="position:relative; top: 8px;">Join Us</h6>
-			<%= image_tag('facebook.jpg') %>			
-			<%= link_to image_tag('twitter.jpg'), 'http://www.twitter.com' %>
+			<%= image_tag('facebook.jpg') %>
+			<%= link_to image_tag('twitter.jpg'), 'http://www.twitter.com', :title => 'TLC Dental Group Twitter Link' %>
 			<a href="http://www.google.com"><h6 style="display:inline-block; position:relative; top:7px;">More</h6></a>		
 		</div>
 	</div>
