--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<title>Home Page | TLC Dental Group Syracuse</title>
+<title>TLC Dental Group Syracuse</title>
 <div class="welcome-text">
 	<div class="row-fluid">
 		<div class="span12">
